<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/expression"
        style="@style/TextExpression"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        style="@style/TextResult"
        app:layout_constraintBottom_toTopOf="@+id/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/expression"
        app:layout_constraintTop_toBottomOf="@+id/expression" />

    <Button
        android:id="@+id/clear"
        style="@style/Operators_Button"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@+id/number_seven"
        app:layout_constraintEnd_toStartOf="@+id/division"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/division"
        style="@style/Operators_Button"
        android:text="@string/div"
        app:layout_constraintBottom_toBottomOf="@+id/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/number_seven"
        style="@style/Numbers_Button"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@+id/number_four"
        app:layout_constraintEnd_toStartOf="@+id/number_eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear" />

    <Button
        android:id="@+id/number_eight"
        style="@style/Numbers_Button"
        android:text="@string/eight"
        app:layout_constraintBottom_toBottomOf="@+id/number_seven"
        app:layout_constraintEnd_toStartOf="@+id/number_nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_seven"
        app:layout_constraintTop_toBottomOf="@+id/clear" />

    <Button
        android:id="@+id/number_nine"
        style="@style/Numbers_Button"
        android:text="@string/nine"
        app:layout_constraintBottom_toBottomOf="@+id/number_eight"
        app:layout_constraintEnd_toStartOf="@+id/multiplication"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_eight"
        app:layout_constraintTop_toBottomOf="@+id/division" />

    <Button
        android:id="@+id/multiplication"
        style="@style/Operators_Button"
        android:text="@string/mul"
        app:layout_constraintBottom_toBottomOf="@+id/number_nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_nine"
        app:layout_constraintTop_toBottomOf="@+id/division" />

    <Button
        android:id="@+id/number_four"
        style="@style/Numbers_Button"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/number_one"
        app:layout_constraintEnd_toStartOf="@+id/number_five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_seven" />

    <Button
        android:id="@+id/number_five"
        style="@style/Numbers_Button"
        android:text="@string/five"
        app:layout_constraintBottom_toBottomOf="@+id/number_four"
        app:layout_constraintEnd_toStartOf="@+id/number_six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_four"
        app:layout_constraintTop_toBottomOf="@+id/number_eight" />

    <Button
        android:id="@+id/number_six"
        style="@style/Numbers_Button"
        android:text="@string/six"
        app:layout_constraintBottom_toBottomOf="@+id/number_five"
        app:layout_constraintEnd_toStartOf="@+id/subtraction"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_five"
        app:layout_constraintTop_toBottomOf="@+id/number_nine" />

    <Button
        android:id="@+id/subtraction"
        style="@style/Operators_Button"
        android:text="@string/sub"
        app:layout_constraintBottom_toBottomOf="@+id/number_six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_six"
        app:layout_constraintTop_toBottomOf="@+id/multiplication" />

    <Button
        android:id="@+id/number_one"
        style="@style/Numbers_Button"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/point"
        app:layout_constraintEnd_toStartOf="@+id/number_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_four" />

    <Button
        android:id="@+id/number_two"
        style="@style/Numbers_Button"
        android:text="@string/two"
        app:layout_constraintBottom_toBottomOf="@+id/number_one"
        app:layout_constraintEnd_toStartOf="@+id/number_three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_one"
        app:layout_constraintTop_toBottomOf="@+id/number_five" />

    <Button
        android:id="@+id/number_three"
        style="@style/Numbers_Button"
        android:text="@string/three"
        app:layout_constraintBottom_toBottomOf="@+id/number_two"
        app:layout_constraintEnd_toStartOf="@+id/sum"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_two"
        app:layout_constraintTop_toBottomOf="@+id/number_six" />

    <Button
        android:id="@+id/sum"
        style="@style/Operators_Button"
        android:text="@string/sum"
        app:layout_constraintBottom_toBottomOf="@+id/number_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_three"
        app:layout_constraintTop_toBottomOf="@+id/number_six" />

    <Button
        android:id="@+id/point"
        style="@style/Numbers_Button"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number_zero"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_one" />

    <Button
        android:id="@+id/number_zero"
        style="@style/Numbers_Button"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="@+id/point"
        app:layout_constraintEnd_toStartOf="@+id/backspace"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/point"
        app:layout_constraintTop_toBottomOf="@+id/number_two"
        app:layout_constraintVertical_bias="0.466" />

    <ImageButton
        android:id="@+id/backspace"
        style="@style/Numbers_Button"
        android:importantForAccessibility="no"
        android:scaleType="center"
        android:src="@drawable/ic_backspace"
        app:tint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/number_zero"
        app:layout_constraintEnd_toStartOf="@+id/equals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_zero"
        app:layout_constraintTop_toBottomOf="@+id/number_three" />

    <Button
        android:id="@+id/equals"
        style="@style/Operators_Button"
        android:text="@string/equals"
        app:layout_constraintBottom_toBottomOf="@+id/backspace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/backspace"
        app:layout_constraintTop_toBottomOf="@+id/sum" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/vertical_guideline_begin" />
</androidx.constraintlayout.widget.ConstraintLayout>